gccida/c2/convert_move
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:952:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v9; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:967:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v24; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:968:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:970:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:971:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:978:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v35; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:982:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v39; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:983:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v40; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:992:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v49; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:998:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v55; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:1030:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v9 = mode_class_0[mode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:1032:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v11 = mode_class_0[v8] != MODE_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:1046:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_lowpart( ( machine_mode)mode, v6); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:1070:30: error: use of undeclared identifier 'machine_mode'
v33 = simplify_gen_subreg( ( machine_mode)v14, v6, ( machine_mode)*( ( unsigned __int8 *)v6 + 2), 0); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:1070:54: error: use of undeclared identifier 'machine_mode'
v33 = simplify_gen_subreg( ( machine_mode)v14, v6, ( machine_mode)*( ( unsigned __int8 *)v6 + 2), 0); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:1078:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[( unsigned int)v8] - 7) < 2 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:1083:29: error: use of undeclared identifier 'machine_mode'
to = simplify_gen_subreg( ( machine_mode)v8, target, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target), 0); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:1083:56: error: use of undeclared identifier 'machine_mode'
to = simplify_gen_subreg( ( machine_mode)v8, target, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target), 0); 
                                                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/expr.c:1083:71: error: expected expression
to = simplify_gen_subreg( ( machine_mode)v8, target, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target), 0); 
                                                                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_move/src/obj/expr.o] Error 1
